--- a/.env.docker
+++ b/.env.docker
@@ -3,10 +3,10 @@ APP_ENV=local
 APP_KEY=base64:FWJcS7oCWcdrsHza16zJtAP6yB0LmSXjD05jebbrtBk=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/Baghdad
-APP_URL=http://localhost:9070
+APP_URL=http://178.18.250.240:9050
 
 DOCKER_APP_CONTAINER_NAME=bookstore
-DOCKER_APP_PORT="9070"
+DOCKER_APP_PORT="9050"
 DOCKER_DB_CONTAINER_NAME=bookstore-database
 
 APP_LOCALE=en
@@ -24,9 +24,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=bookstore-database
 DB_PORT=3306
-DB_DATABASE=bookstore
+DB_DATABASE=laravel
 DB_USERNAME=laravel
 DB_PASSWORD=laravel
 
